Version 1.9 of State Estimator. Add statistics (median, max, percentiles) to estimation errors on V and theta